--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -1,8 +1,3 @@
-:root {
-    font-family: sans-serif;
-}
-
-
 .indexMain{
     display: flex;
     flex-direction: column;
@@ -12,6 +7,14 @@
 .characterCardName {
     font-weight: 700;
     text-decoration: none !important;
+}
+
+.quote {
+    font-size: 18px;
+    font-style: italic;
+    padding: 8px;
+    background: white;
+    border-radius: 8px;
 }
 
 .bodyBold {
@@ -26,18 +29,18 @@
     align-items: center;
     margin: 24px 40px;
 }
-.characterCard {
+.characterCardStyling {
     padding: 24px;
     background: #f5f5f5;
     border-radius: 8px;
     box-shadow: 5px 5px #00000025;
     width: 320px;
-    height: 480px;
+    height: 296px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.characterCard:hover {
+.characterCardStyling:hover {
     background: #e6e6e6;
 }
