--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -4,18 +4,6 @@
     align-items: center;
 }
 
-.characterCardName {
-    font-weight: 700;
-    text-decoration: none !important;
-}
-
-.quote {
-    font-size: 18px;
-    font-style: italic;
-    padding: 8px;
-    background: white;
-    border-radius: 8px;
-}
 
 .bodyBold {
     font-weight: 700;
@@ -29,6 +17,20 @@
     align-items: center;
     margin: 24px 40px;
 }
+
+/* .characterCardName {
+    font-weight: 700;
+    text-decoration: none !important;
+}
+
+.quote {
+    font-size: 18px;
+    font-style: italic;
+    padding: 8px;
+    background: white;
+    border-radius: 8px;
+}
+
 .characterCardStyling {
     padding: 24px;
     background: #f5f5f5;
@@ -43,4 +45,4 @@
 
 .characterCardStyling:hover {
     background: #e6e6e6;
-}
+} */
