--- a/src/components/rollControlComponents/die.module.css
+++ b/src/components/rollControlComponents/die.module.css
@@ -1,8 +1,9 @@
 .dieContainer {
     display: flex;
     width: 40px;
-    padding: 4px 0px;
+    height: 40px;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -15,9 +16,20 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    top: -44px;
+    top: -30px;
     height: 0px;
 }
 
 .shapeContainer {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+svg {
+    flex-shrink: 0;
 }
