Added a bunch of styling, and the roll functionality in a single row. Still working on getting explosions to work correctly.

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -91,20 +91,20 @@
     align-self: stretch;
 }
 
-.chipsAndTips {
-    display: flex;
-    height: 149px;
-    align-items: flex-start;
-    align-self: stretch;
-}
-
 .diceRoller {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex: 1 0 0;
     align-self: stretch;
-    height: calc(100% - 50.5px)
+    height: calc(100% - 50.5px);
+}
+
+.chipsAndTips {
+    display: flex;
+    height: 149px;
+    align-items: flex-start;
+    align-self: stretch;
 }
 
 ul {
