--- a/src/components/rollControlComponents/rollRow.module.css
+++ b/src/components/rollControlComponents/rollRow.module.css
@@ -2,6 +2,10 @@
     align-items: center;
     display: flex;
     gap: 32px;
+    background-color: var(--panel-background);
+    padding: 16px 24px;
+    border-radius: 4px;
+    width: 100%;
 }
 
 .diceRow {
