--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --blue-1: #051122;
+  --blue-2: #081932;
+
+  --Gray-6: #F5F5F5;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--Gray-6, #F5F5F5);
+  background: var(--blue-1, #051122);
 }
 
 code {
