--- a/src/components/roll_panel.css
+++ b/src/components/roll_panel.css
@@ -13,3 +13,74 @@
     gap: 16px;
     align-self: stretch;
 }
+.dice-section {
+    display: grid;
+    row-gap: 32px;
+    column-gap: 8px;
+    flex: 1 0 0;
+    align-self: stretch;
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.dice-section__die-thread {
+    display: flex;
+    padding: 8px 4px;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    flex: 1 0 0;
+    align-self: stretch;
+}
+
+.button-row {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+}
+
+.button {
+    display: flex;
+    min-width: 64px;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+    border-radius: 4px;
+    text-align: center;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.button__button-primary {
+    background: var(--buttons-button-blue, #004CB3);
+    border: 2px solid var(--buttons-button-blue, #004CB3);
+    color: #F5F5F5;
+}
+
+.button__button-primary:hover {
+    background: #0060e8;
+    border: 2px solid #0060e8;
+    color: #F5F5F5;
+}
+
+.button__button-secondary {
+    background: transparent;
+    border: 2px solid var(--blue-6, #84B1F0);
+    color: var(--blue-6, #84B1F0);
+}
+
+.button__button-secondary:hover {
+    background: var(--blue-3, #142A48);
+    color: var(--Gray-6, #F5F5F5);
+}
+
+/* --blue-3: #142A48;
+--blue-4: #223E65;
+--blue-5: #43689B;
+--blue-6: #84B1F0; */
