--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -69,7 +69,7 @@
     display: flex;
     padding: 0px 24px;
     align-items: center;
-    gap: 32px;
+    justify-content: space-between;
     align-self: stretch;
 }
 
