--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,24 @@ body {
   background: var(--blue-2, #081932);
 }
 
+.panel__panel-right {
+  display: flex;
+  width: 400px;
+  padding: 12px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+}
+
+.panel-right__button-row {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
