Now spending bounty points updates the number of bounty points that a character has. Cannot spend more points than a character has. Built this logic into the button and menu level to ensure that players cannot accidentally put more points in their cart than they have.

--- a/src/components/spend_bounty_points_panel.css
+++ b/src/components/spend_bounty_points_panel.css
@@ -1,4 +1,8 @@
 .bounty-points-cart {
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
     flex: 1 0 0;
+    width: 100%;
+    gap: 8px
 }
