--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -7,8 +7,7 @@
 }
 
 .nav {
-    display: none;
-    /* display: flex; */
+    display: flex;
     padding: 0px 4px;
     justify-content: flex-end;
     align-items: center;
