Added the ability to track current wind within a session. Left this fully client side, since wind resets at the beginning of each new game session.
Added the ability to add and remove bounty points. This is a short-term solution for MVP. Will tie this into chip functionality in a future feature set.

--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -85,6 +85,11 @@
     gap: 8px;
 }
 
+.non-rollable-stats__wind-container {
+    display: flex;
+    gap: 8px;
+}
+
 .horizontal-block {
     display: flex;
     padding: 16px;
