--- a/src/components/upgrade_row.css
+++ b/src/components/upgrade_row.css
@@ -3,14 +3,43 @@
     flex-direction: column;
     border-radius: 4px;
     align-self: stretch;
-    padding: 8px;
-    gap: 4px;
+    padding: 16px;
+    gap: 2px;
 }
 
 .upgrade-row__content {
+    color: var(--Gray-6, #F5F5F5);
+    font-family: Inter;
+    font-style: normal;
+    line-height: normal;
     display: flex;
     flex-direction: row;
     gap: 8px;
     align-self: stretch;
     justify-content: space-between;
+}
+
+.upgrade-row__stat-name {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.upgrade-row__cost {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--blue-6, #84B1F0);
+}
+
+.upgrade-row__upgrade-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.upgrade-row__cost-and-cancel-container {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 }
