--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,72 @@ code {
 }
 
 
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.button_fill-width {
+  flex: 1 0 0;
+}
+
+.button_large {
+  min-width: 64px;
+  padding: 8px 16px;
+}
+
+.button_small {
+  min-width: 16px;
+  padding: 4px 8px;
+}
+
+.button__button-primary {
+  background: var(--buttons-button-blue, #004CB3);
+  border: 2px solid var(--buttons-button-blue, #004CB3);
+  color: #F5F5F5;
+}
+
+.button__button-primary:hover {
+  background: #0060e8;
+  border: 2px solid #0060e8;
+  color: #FFFFFF;
+}
+
+.button__button-primary:disabled {
+  background-color: #484660;
+  border: 2px solid #484660;
+  opacity: 75%;
+}
+
+.button__button-secondary {
+  background: transparent;
+  border: 2px solid var(--blue-6, #84B1F0);
+  color: var(--blue-6, #84B1F0);
+}
+
+.button__button-secondary:hover {
+  background: var(--blue-3, #142A48);
+  color: var(--Gray-6, #F5F5F5);
+}
+
+.button__button-tertiary {
+  border-radius: 4px;
+  background: var(--blue-3);
+  border: solid 0px;
+  color: var(--Gray-6);
+  font-size: 12px;
+}
+
+.button__button-tertiary:hover {
+  background: #1d4070;
+}
+
