More styling changes - adjusted blue color variables to give app better contrast - adjusted padding and gaps on global panel elements to give a better feeling of space usage - moved popover styling to character_view.css to match where the element is actually rendered. - updated roll panel styling and layout, including making a "modifier" section where untrained and bust inidicators now live. This can be where chip modifiers could live in the future.

--- a/src/components/upgrade_row.css
+++ b/src/components/upgrade_row.css
@@ -8,7 +8,7 @@
     padding: 16px;
     gap: 6px;
     border: 1px solid var(--blue-4);
-    background: var(--blue-3);
+    background: var(--blue-2);
 }
 
 .upgrade-row__details {
@@ -40,6 +40,10 @@
     justify-content: space-between;
     font-size: 14px;
     font-weight: 400;
+}
+
+.upgrade-row__new-stat {
+    color: orange;
 }
 
 .upgrade-row__cost-and-cancel-container {
