--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -101,7 +101,6 @@
 
 .character-sheet {
     display: flex;
-    padding: 24px;
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
@@ -210,4 +209,39 @@
 
 .stat-group__item_concentration {
     padding-left: 32px;
+}
+
+
+[popover]:popover-open {
+    opacity: 1;
+    transform: translateX(-8px);
+    inset: unset;
+    position: absolute;
+    left: 35vw;
+    top: 80px;
+}
+
+[popover] {
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    opacity: 0;
+    transform: translateX(0px);
+    transition: opacity 300ms, transform 300ms;
+    color: orange;
+    background: var(--blue-1);
+    border: 1px solid var(--blue-5);
+    border-radius: 4px;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+@starting-style {
+    [popover]:popover-open {
+        opacity: 0;
+        transform: translateX(0px);
+    }
 }
