--- a/src/components/roll_panel.css
+++ b/src/components/roll_panel.css
@@ -1,3 +1,11 @@
+.roll-panel__title {
+    color: var(--Gray-6, #F5F5F5);
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 .dice-section {
     display: flex;
     flex-direction: row;
@@ -21,15 +29,16 @@
 
 .dice-section-inner {
     display: flex;
-    gap: 32px;
+    /* gap: 8px; */
     flex-direction: row;
     flex-wrap: wrap;
     align-self: stretch;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .dice-section__die-thread {
     display: flex;
+    width: 78px;
 }
 
 .dice-section__die-thread-inner {
@@ -52,21 +61,57 @@
     font-weight: 700;
 }
 
+.roll-panel__modifier-section {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+}
+
 .result-section {
     font-family: Inter;
-    font-size: 12px;
+    font-size: 16px;
     font-style: normal;
     line-height: normal;
     text-align: center;
+    width: 100%;
+    padding: 24px 0;
+    /* height: 72px; */
 }
 
 .result-section__roll-result {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 700;
 }
+.result-section__roll-result-value {
+    color: var(--blue-6);
+}
 
-.result-section__bust-indicator {
+.result-section__untrained-indicator {
     color: orange;
-    padding: 16px 0;
-    font-weight: 700;
+}
+
+/* .result-section__bust-indicator {
+    color: orange;
+    background: var(--blue-2);
+    border: 1px solid var(--blue-5);
+    border-radius: 8px;
+    padding: 12px 16px;
+    font-size: 14px;
+    font-weight: 400;
+} */
+
+
+.result-section__penalty-indicator {
+    /* color: orange; */
+    background: var(--blue-2);
+    /* border: 1px solid var(--blue-5); */
+    border-radius: 8px;
+    padding: 12px 16px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.result-section__penalty-impact {
+    color: orange;
 }
