--- a/src/components/home_view.css
+++ b/src/components/home_view.css
@@ -1,52 +1,51 @@
-.character-grid{
+.character-grid {
 }
 
-.character-grid-inner{
-    margin: 0 auto;
-    max-width: 800px;
-    display: grid !important;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
+.character-grid-inner {
+  margin: 0 auto;
+  max-width: 800px;
+  display: grid !important;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
 }
 
 .character-grid a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .character-card {
-    font-family: Inter;
-    font-style: normal;
-    line-height: normal;
+  font-family: Inter;
+  font-style: normal;
+  line-height: normal;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 316px;
-    margin: 18px;
-    border-radius: 4px;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 316px;
+  margin: 18px;
+  border-radius: 4px;
+  overflow: hidden;
 
-    padding: 8px
+  padding: 8px;
 }
 
 .character-card:hover {
-    background-color: var(--blue-4);
-    
-/* -webkit-box-shadow:0px 0px 17px 3px rgba(132,177,240,1);
+  background-color: var(--blue-4);
+
+  /* -webkit-box-shadow:0px 0px 17px 3px rgba(132,177,240,1);
 -moz-box-shadow: 0px 0px 17px 3px rgba(132,177,240,1);
 box-shadow: 0px 0px 17px 3px rgba(132,177,240,0.5); */
-
 }
 
 .character-card__character-image {
-    height: 300px;
-    width: 100%;
-    background-size: cover;
-    border-radius: 4px;
+  height: 300px;
+  width: 100%;
+  background-size: cover;
+  border-radius: 4px;
 }
 
 .character-card__character-name {
-    color: white;
+  color: white;
 }
 
 /* .restaurant-delete-button button {
