--- a/src/components/roll_panel.css
+++ b/src/components/roll_panel.css
@@ -1,15 +1,15 @@
 .roll-panel__title {
-    color: var(--Gray-6, #F5F5F5);
-    font-family: Inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: var(--Gray-6, #f5f5f5);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 .dice-section {
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
 
 /* .dice-section {
@@ -23,72 +23,72 @@
 } */
 
 .dice-section {
-    justify-content: center;
-    flex: 1 0 0;
+  justify-content: center;
+  flex: 1 0 0;
 }
 
 .dice-section-inner {
-    display: flex;
-    /* gap: 8px; */
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-self: stretch;
-    justify-content: space-between;
+  display: flex;
+  /* gap: 8px; */
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: stretch;
+  justify-content: space-between;
 }
 
 .dice-section__die-thread {
-    display: flex;
-    width: 78px;
+  display: flex;
+  width: 78px;
 }
 
 .dice-section__die-thread-inner {
-    display: flex;
-    padding: 16px 4px;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
-    flex: 1 0 0;
-    align-self: flex-start;
-    border-radius: 4px;
+  display: flex;
+  padding: 16px 4px;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  flex: 1 0 0;
+  align-self: flex-start;
+  border-radius: 4px;
 }
 
 .dice-section__die-thread-inner_highest {
-    background-color: #0E2950;
+  background-color: #0e2950;
 }
 
 .dice-section_highest-roll-text {
-    font-size: 12px;
-    font-weight: 700;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .roll-panel__modifier-section {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
 }
 
 .result-section {
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    line-height: normal;
-    text-align: center;
-    width: 100%;
-    padding: 24px 0;
-    /* height: 72px; */
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+  text-align: center;
+  width: 100%;
+  padding: 24px 0;
+  /* height: 72px; */
 }
 
 .result-section__roll-result {
-    font-size: 28px;
-    font-weight: 700;
+  font-size: 28px;
+  font-weight: 700;
 }
 .result-section__roll-result-value {
-    color: var(--blue-6);
+  color: var(--blue-6);
 }
 
 .result-section__untrained-indicator {
-    color: orange;
+  color: orange;
 }
 
 /* .result-section__bust-indicator {
@@ -101,17 +101,16 @@
     font-weight: 400;
 } */
 
-
 .result-section__penalty-indicator {
-    /* color: orange; */
-    background: var(--blue-2);
-    /* border: 1px solid var(--blue-5); */
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 14px;
-    font-weight: 400;
+  /* color: orange; */
+  background: var(--blue-2);
+  /* border: 1px solid var(--blue-5); */
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .result-section__penalty-impact {
-    color: orange;
+  color: orange;
 }
