--- a/src/components/upgrade_row.css
+++ b/src/components/upgrade_row.css
@@ -1,54 +1,54 @@
 .upgrade-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 4px;
-    align-self: stretch;
-    padding: 16px;
-    gap: 6px;
-    border: 1px solid var(--blue-4);
-    background: var(--blue-2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
+  align-self: stretch;
+  padding: 16px;
+  gap: 6px;
+  border: 1px solid var(--blue-4);
+  background: var(--blue-2);
 }
 
 .upgrade-row__details {
-    color: var(--Gray-6, #F5F5F5);
-    font-family: Inter;
-    font-style: normal;
-    line-height: normal;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    align-self: stretch;
-    justify-content: space-between;
+  color: var(--Gray-6, #f5f5f5);
+  font-family: Inter;
+  font-style: normal;
+  line-height: normal;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-self: stretch;
+  justify-content: space-between;
 }
 
 .upgrade-row__stat-name {
-    font-size: 16px;
-    font-weight: 700;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .upgrade-row__cost {
-    font-size: 16px;
-    font-weight: 700;
-    color: var(--blue-6, #84B1F0);
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--blue-6, #84b1f0);
 }
 
 .upgrade-row__upgrade-details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-size: 14px;
-    font-weight: 400;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .upgrade-row__new-stat {
-    color: orange;
+  color: orange;
 }
 
 .upgrade-row__cost-and-cancel-container {
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: center;
 }
