--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,10 @@ h1 {
   width: 100%;
   border-top: 1px solid var(--blue-4);
 }
+
+.footer {
+  width: 100%;
+  text-align: center;
+  padding: 24px;
+  color: var(--blue-6);
+}
