In order to support responsive design, I had to change up some components and move things around. This work will make it easier to shift smoothly between web and mobile.
Abstracted the menu component to just take children, and moved all upgrade logic into the StatUpgradeButton component.

Moved "close on click outside" logic into the menu to let me reuse it elsewhere.

Created a CharacterSheet component to make CharacterView less chonky. Will be further decomposing CharacterSheet into modules in later commits.

Added a ChipButton component and removed excess logic from ChipCountersContainer

Updated SpendBountyPointsPanel to accommodate some of these changes.

Added first Context in CharacterContext. Will be adding more in the future to reduce prop drilling.

--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -244,3 +244,24 @@
     transform: translateX(0px);
   }
 }
+
+@media (max-width: 1440px) {
+  .character-sheet {
+    overflow-y: scroll;
+  }
+
+  .character-sheet__inner {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 0;
+    align-self: stretch;
+  }
+
+  .horizontal-block {
+    height: 70%;
+  }
+
+  .non-rollable-stats {
+    flex-direction: column;
+  }
+}
